--- a/static/css/code.css
+++ b/static/css/code.css
@@ -3,7 +3,7 @@
 
 code,
 pre {
-    font-family: 'Inconsolata-g', 'Inconsolata', 'Menlo', 'Monaco', 'Consolas', 'Courier New', monospace;
+    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, Menlo, Monaco, 'Courier New', monospace;
     /*font-size: 13px;*/
     /*border: 1px #ccc dotted;*/
     /*background-color: #f9f9f9;*/
