--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@
 
 html,
 body {
-  font-family: 'Microsoft YaHei', 微软雅黑, "Lato",  sans-serif;
+  font-family: "lucida grande", "lucida sans unicode", lucida, helvetica, "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
   height: 100%;
   font-size: 15px;
 }
