修改 read more 图标

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
               <a class="btn btn-primary" href="{{ article_url }}" title="permanent link">
                 <span class="glyphicon glyphicon-link"></span></a>
               <a class="btn btn-primary" href="{{ article_url }}" title="read more">
-                <span class="glyphicon glyphicon-plus"></span></a>
+                <span class="glyphicon glyphicon-option-horizontal"></span></a>
             </div>
           </li>
         </div>
