feat(SEO): 添加 meta keywords 配置
- 通过每篇文章的 Tags 来设置 meta keywords 属性值。
- 默认情况使用全局的 KEYWORDS 配置。
- pelicanconf.py 添加 KEYWORDS 配置项。

--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,8 @@
 {% set name = article.title %}
 {% set link = article.url %}
+{% if article.tags %}
+  {% set article_keyword = article.tags|join(',') %}
+{% endif %}
 {% extends "base.html" %}
 
 {% block left_sidebar %}
