fix: 解决存在中文 category、tag 时 URL 路径显示错误的问题

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -17,7 +17,7 @@
       {% set parent = "accordion" %}
       {% set id = category %}
       {% set title_left = category %}
-      {% set title_left_link = "/category/%s.html" % (category) %}
+      {% set title_left_link = "/%s" % (category.url) %}
       {% set title_right = articles|count %}
       {% set entry_list = articles %}
       {{ article_panel_list(
